Modificacion para permiso de peticiones